# job_scheduling_simulation

./: .gitignore  README.md  architecture.md  pyproject.toml
.github/workflows/: ci.yml
simulation-results/: ci.json  full.json  summary.md
specs/001-scheduled-job-visibility/: plan.md  spec.md
src/job_visibility/: __init__.py  api.py  cli.py  engine.py  model.py  scenarios.py  simulation.py
tests/: test_api.py  test_engine.py  test_scenarios.py
